--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,152 @@
-#root {
-  max-width: 1280px;
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.container {
+  display: flex;
+  width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding-left: 30px;
+  justify-content: flex-start;
+  /* border: blue solid; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/*HEADER*/
+header {
+  border-bottom: rgb(241, 241, 241) solid 1px;
+  height: 50px;
+  align-items: center;
+  display: flex;
+  font-size: 40px;
+  letter-spacing: 3px;
+  padding: 10px 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header div {
+  display: flex;
+  gap: 60px;
+  margin-left: 120px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+header button {
+  padding: 5px 15px;
+  border: none;
+  background-color: #177782;
+  color: white;
+  border-radius: 5px;
+  height: 35px;
 }
 
-.card {
-  padding: 2em;
+header input {
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  border: none;
+  height: 30px;
+  width: 500px;
+}
+nav {
+  display: flex;
+  gap: 15px;
 }
 
-.read-the-docs {
-  color: #888;
+/*HERO*/
+
+.hero {
+  width: 100%;
+  background-image: url("src/assets/images/hero-image-1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  display: flex;
+  align-items: center;
+}
+
+.hero > div {
+  background-color: white;
+  height: 300px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  padding: 40px;
+  box-sizing: border-box;
+  justify-content: space-between;
+}
+
+.hero h2 {
+  font-size: 32px;
+}
+
+.hero div div {
+  width: 75%;
+}
+
+.hero button {
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: #177782;
+  margin-top: 20px;
+}
+
+.hero p:last-child {
+  color: #177782;
+  text-decoration: underline;
+}
+
+/*HIGHLIGHTS*/
+.filters {
+  /* border: red solid; */
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  border-bottom: rgb(241, 241, 241) solid 1px;
+  padding-bottom: 15px;
+}
+
+.filters div {
+  /* border: purple solid; */
+  display: flex;
+  width: 25%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.filters button {
+  width: 150px;
+  height: 30px;
+}
+
+.highlights {
+  display: flex;
+  flex-direction: column;
+  /* border: orange solid; */
+  margin: 30px 0;
+  gap: 15px;
+}
+
+.highlights h2 {
+  font-size: 26px;
+  margin-bottom: 20px;
+}
+
+/*FOOTER*/
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+}
+footer div {
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
 }
