--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,7 @@ nav {
   display: flex;
   flex-direction: column;
   /* border: orange solid; */
+  max-width: 1200px;
   margin: 30px 0;
   gap: 15px;
 }
@@ -133,7 +134,7 @@ nav {
   margin-bottom: 20px;
 }
 .articles {
-  border: blue solid;
+  /* border: blue solid; */
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -141,7 +142,7 @@ nav {
 }
 
 .card {
-  border: orange solid;
+  /* border: orange solid; */
   width: 250px;
 }
 
@@ -150,17 +151,97 @@ nav {
   align-items: center;
   gap: 10px;
   margin-bottom: 10px;
+  /* border: purple solid; */
 }
 
 .card-small-avatar {
   height: 30px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .card-image {
   height: 350px;
   width: 250px;
   object-fit: cover;
+}
+
+/*OFFER*/
+
+.product-background {
+  background-color: #eaedee;
+}
+
+.product-main {
+  /* border: blue solid; */
+  display: flex;
+  margin: 25px auto;
+  justify-content: space-between;
+  height: 665px;
+  padding: 0;
+}
+.product-card {
+  /* border: red solid; */
+  background-color: white;
+  padding: 40px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.product-image {
+  width: 450px;
+  height: 665px;
+  object-fit: cover;
+}
+
+.product-card div {
+  /* border: orange solid; */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 2px 0;
+}
+
+.product-card > div {
+  /* border: green solid; */
+  margin: 20px 0;
+}
+
+.product-card > div:nth-child(2) {
+  display: flex;
+  /* border: yellow solid; */
+}
+
+.product-card button {
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: #177782;
+}
+
+.product-card div div div {
+  /* border: purple solid; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 350px;
+  /* margin: 0 auto; */
+  font-size: 14px;
+}
+
+.product-card h3 {
+  font-size: 24px;
+  font-weight: 500;
+}
+.product-card h4 {
+  font-size: 16px;
+  font-weight: 600;
+}
+.product-card p {
+  font-size: 14px;
 }
 
 /*FOOTER*/
