--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,8 @@ nav {
   /* border: red solid; */
   width: 100%;
   display: flex;
-  gap: 20px;
+  justify-content: space-between;
+  /* gap: 20px; */
   border-bottom: rgb(241, 241, 241) solid 1px;
   padding-bottom: 15px;
 }
@@ -150,14 +151,23 @@ nav {
 .filters div {
   /* border: purple solid; */
   display: flex;
-  width: 25%;
-  justify-content: space-between;
+  width: 32%;
+  justify-content: flex-start;
+  gap: 10px;
   align-items: center;
 }
 
 .filters button {
   width: 150px;
   height: 30px;
+}
+
+.filters input {
+  width: 50px;
+  padding: 5px 5px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  border: none;
 }
 
 .highlights {
@@ -220,6 +230,31 @@ nav {
 .card-product-info > p:first-child {
   font-size: 14px;
   color: black;
+}
+
+.pagination {
+  /* border: red solid; */
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+
+.pagination button:not(.current-page) {
+  border: #177782 solid 1px;
+  color: #177782;
+  background-color: white;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
+
+.current-page {
+  background-color: #177782;
+  color: white;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  border: none;
 }
 
 /*OFFER*/
