--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   position: relative;
+
   /* background-color: #ecedee; */
 }
 
 main {
   min-height: 1200px;
+
+  /* background-color: #ecedee; */
 }
 
 .container {
@@ -15,6 +18,11 @@ main {
   padding-left: 30px;
   /* justify-content: flex-start; */
   /* border: blue solid; */
+}
+
+.error-message {
+  color: #c2175b;
+  font-size: 12px;
 }
 
 /*HEADER*/
@@ -147,6 +155,8 @@ nav {
   /* gap: 20px; */
   border-bottom: rgb(241, 241, 241) solid 1px;
   padding-bottom: 15px;
+  color: #177782;
+  font-size: 14px;
 }
 
 .filters div {
@@ -407,11 +417,6 @@ nav {
   background-color: #177782;
 }
 
-.connexion-error-message {
-  color: #c2175b;
-  font-size: 12px;
-}
-
 .newsletter-terms {
   font-size: 10px;
   margin-top: 10px;
@@ -432,6 +437,7 @@ nav {
   flex-direction: column;
   border: #c7c1c1 solid 1px;
   width: 100%;
+  background-color: white;
   /* padding: 20px; */
 }
 
@@ -446,7 +452,7 @@ nav {
 .publish {
   display: flex;
   flex-direction: column;
-  border: blue solid;
+  /* border: blue solid; */
   margin: 40px auto;
   gap: 25px;
 }
@@ -454,9 +460,9 @@ nav {
 .photo-upload {
   display: flex;
   flex-direction: column;
-
   margin: 15px auto;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 .picture-display {
@@ -467,6 +473,24 @@ nav {
   opacity: 0;
   position: absolute;
   z-index: -1;
+}
+
+.publish input {
+  border: none;
+  border-bottom: #f2eded 1px solid;
+  padding-bottom: 5px;
+  width: 400px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.publish textarea {
+  border: none;
+  width: 400px;
+  height: 100px;
+  border-bottom: #f2eded 1px solid;
+  padding-bottom: 5px;
+  resize: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .add-photo-button {
@@ -491,6 +515,67 @@ nav {
   width: 80px;
   margin-top: 40px;
   align-self: flex-end;
+}
+
+.checkbox-publish {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.checkbox-publish input {
+  width: 40px;
+}
+.checkbox-publish label {
+  font-size: 12px;
+  align-self: center;
+}
+
+/*PAYMENT*/
+
+.payment-container {
+  border: grey solid;
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin: 60px auto;
+  gap: 40px;
+}
+.payment-container h3 {
+  color: #c7c1c1;
+  margin-bottom: 30px;
+}
+.payment-container h4 {
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+.payment-container > div {
+  /* border: blue solid; */
+  /* margin: 20px 0; */
+  padding: 20px;
+  border-bottom: #c7c1c1 1px solid;
+}
+
+.payment-container div div div {
+  /* border: blue solid; */
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+.payment-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+}
+
+.payment-container button {
+  height: 40px;
+  border: none;
+  background-color: green;
+  color: white;
+  border-radius: 5px;
 }
 
 /*FOOTER*/
