--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,11 @@
+/*GENERAL*/
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   position: relative;
-
-  /* background-color: #ecedee; */
 }
 
 main {
   min-height: 1200px;
-
-  /* background-color: #ecedee; */
 }
 
 .container {
@@ -16,13 +13,37 @@ main {
   max-width: 1280px;
   margin: 0 auto;
   padding-left: 30px;
-  /* justify-content: flex-start; */
-  /* border: blue solid; */
 }
 
 .error-message {
   color: #c2175b;
   font-size: 12px;
+}
+
+.white-background {
+  background-color: white;
+}
+
+Link:hover {
+  cursor: pointer;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+/*TYPOGRAPHY*/
+
+.bold {
+  font-weight: 600;
+}
+
+.grey-font {
+  color: #666666;
+}
+
+.turquoise-font {
+  color: #177782;
 }
 
 /*HEADER*/
@@ -35,10 +56,8 @@ header {
   font-size: 40px;
   letter-spacing: 3px;
   padding: 10px 0;
-  /* position: fixed; */
   width: 100%;
   background-color: white;
-  /* border: red solid; */
 }
 
 header div {
@@ -47,7 +66,6 @@ header div {
   margin-left: 120px;
   align-items: center;
   justify-content: space-between;
-  /* border: green solid; */
   width: 100%;
 }
 
@@ -77,7 +95,6 @@ header input {
 }
 nav {
   display: flex;
-  /* border: orange solid; */
 }
 
 /*HERO*/
@@ -91,12 +108,10 @@ nav {
   height: 600px;
   display: flex;
   align-items: center;
-  /* border: green solid; */
   position: relative;
 }
 
 .hero .container {
-  /* border: blue solid; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -106,7 +121,6 @@ nav {
 
 .hero-container {
   background-color: white;
-  height: 300px;
   width: 450px;
   display: flex;
   flex-direction: column;
@@ -114,8 +128,7 @@ nav {
   padding: 40px;
   box-sizing: border-box;
   justify-content: space-between;
-  /* border: red solid; */
-  /* margin: 0 auto; */
+  gap: 15px;
 }
 
 .hero img {
@@ -126,6 +139,7 @@ nav {
 
 .hero h2 {
   font-size: 32px;
+  line-height: 1.2;
 }
 
 .hero-container div {
@@ -139,20 +153,21 @@ nav {
   color: white;
   background-color: #177782;
   margin-top: 20px;
+  padding: 0 15px;
+  font-size: 16px;
 }
 
-.hero p:last-child {
+.hero a {
   color: #177782;
   text-decoration: underline;
+  font-size: 14px;
 }
 
 /*HIGHLIGHTS*/
 .filters {
-  /* border: red solid; */
   width: 100%;
   display: flex;
   justify-content: space-between;
-  /* gap: 20px; */
   border-bottom: rgb(241, 241, 241) solid 1px;
   padding-bottom: 15px;
   color: #177782;
@@ -160,7 +175,6 @@ nav {
 }
 
 .filters div {
-  /* border: purple solid; */
   display: flex;
   width: 32%;
   justify-content: flex-start;
@@ -184,7 +198,6 @@ nav {
 .highlights {
   display: flex;
   flex-direction: column;
-  /* border: orange solid; */
   max-width: 1200px;
   margin: 30px 0;
   gap: 15px;
@@ -196,7 +209,6 @@ nav {
   margin-bottom: 30px;
 }
 .articles {
-  /* border: blue solid; */
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -204,7 +216,6 @@ nav {
 }
 
 .card {
-  /* border: orange solid; */
   width: 210px;
   margin-bottom: 30px;
   font-size: 12px;
@@ -217,7 +228,6 @@ nav {
   align-items: center;
   gap: 10px;
   margin-bottom: 10px;
-  /* border: purple solid; */
 }
 
 .card-small-avatar {
@@ -244,10 +254,10 @@ nav {
 }
 
 .pagination {
-  /* border: red solid; */
   display: flex;
   justify-content: center;
   gap: 5px;
+  margin: 40px auto;
 }
 
 .pagination button:not(.current-page) {
@@ -272,11 +282,9 @@ nav {
 
 .product-background {
   background-color: #eaedee;
-  /* width: 100%; */
 }
 
 .product-container {
-  /* border: blue solid; */
   display: flex;
   margin: 0 auto;
   margin-bottom: 50px;
@@ -286,7 +294,6 @@ nav {
   padding: 30px 0;
 }
 .product-card {
-  /* border: red solid; */
   background-color: white;
   padding: 40px;
   width: 400px;
@@ -301,22 +308,18 @@ nav {
 }
 
 .product-card-content {
-  /* border: orange solid; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* gap: 10px; */
   margin: 2px 0;
 }
 
 .product-card > div {
-  /* border: green solid; */
   margin: 20px 0;
 }
 
 .product-card > div:nth-child(2) {
   display: flex;
-  /* border: yellow solid; */
 }
 
 .product-card button {
@@ -329,32 +332,26 @@ nav {
 }
 
 .product-info {
-  /* border: turquoise solid; */
   display: flex;
   font-weight: 100;
+  justify-content: space-between;
 }
 
 .product-card-infos {
-  /* border: purple solid; */
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 10px;
+  color: #666666;
 }
 
 .product-card-labels {
-  /* border: green solid; */
   display: flex;
   flex-direction: column;
   color: #c7c1c1;
-  gap: 5px;
+  gap: 10px;
 }
 
-/* .product-card div div div p {
-  font-size: 14px;
-} */
-
 .card-seller-offer {
-  /* border: yellow solid; */
   display: flex;
   align-items: center;
   gap: 15px;
@@ -363,12 +360,12 @@ nav {
 .product-card h3 {
   font-size: 24px;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 }
 .product-card h4 {
   font-size: 16px;
   font-weight: 600;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   border-top: #eaedee 1px solid;
   padding-top: 25px;
 }
@@ -378,7 +375,6 @@ nav {
 
 /*SIGNUP*/
 .signup-content {
-  /* border: red solid; */
   display: flex;
   flex-direction: column;
   width: 350px;
@@ -389,7 +385,6 @@ nav {
 }
 
 .signup-content form {
-  /* border: green solid; */
   display: flex;
   flex-direction: column;
   margin: 30px;
@@ -402,7 +397,6 @@ nav {
 }
 
 .signup-content form input {
-  /* margin-top: 15px; */
   border: none;
   border-bottom: #d7841d 1px solid;
   padding-bottom: 5px;
@@ -428,17 +422,12 @@ nav {
 
 /*PUBLISH*/
 
-.main-publish {
-  /* background-color: #c7c1c1; */
-}
-
 .publish-card {
   display: flex;
   flex-direction: column;
   border: #c7c1c1 solid 1px;
   width: 100%;
   background-color: white;
-  /* padding: 20px; */
 }
 
 .publish-section {
@@ -452,7 +441,6 @@ nav {
 .publish {
   display: flex;
   flex-direction: column;
-  /* border: blue solid; */
   margin: 40px auto;
   gap: 25px;
 }
@@ -533,7 +521,7 @@ nav {
 /*PAYMENT*/
 
 .payment-container {
-  border: grey solid;
+  background-color: white;
   display: flex;
   flex-direction: column;
   width: 600px;
@@ -541,7 +529,6 @@ nav {
   gap: 40px;
 }
 .payment-container h3 {
-  color: #c7c1c1;
   margin-bottom: 30px;
 }
 .payment-container h4 {
@@ -550,14 +537,11 @@ nav {
 }
 
 .payment-container > div {
-  /* border: blue solid; */
-  /* margin: 20px 0; */
   padding: 20px;
   border-bottom: #c7c1c1 1px solid;
 }
 
 .payment-container div div div {
-  /* border: blue solid; */
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
@@ -576,6 +560,8 @@ nav {
   background-color: green;
   color: white;
   border-radius: 5px;
+  margin-top: 20px;
+  font-size: 16px;
 }
 
 /*FOOTER*/
